Reduce Ink Wars sound frequency and volume